@@ -1,6 +1,11 @@
 2007-02-20  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/producers/wms.py:
+	  Pad data packets by two bytes. Hack to make this demoable.
+
+2007-02-20  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/producers/wms.py:
 	  Next checkpoint.
 	  Can now negotiate with WME, and dump something that looks like ASF
 	  to a file
